dbeaver/pro#7349 Use fetch workflow. It closes statement before fetchEnd call